added myself as a collaborator

--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -83,9 +83,6 @@
       <a href="https://el-go-go-5a501.firebaseapp.com/index.html">
         <img src="{% static 'images/el-gogo.png' %}" alt="el-gogo" style="height: 2.5rem;">
       </a>
-      {% comment %} <div>
-        Hang on tight! More coming soon!
-      </div> {% endcomment %}
     </div>
   </section>
 
@@ -96,6 +93,7 @@
     <div class="collaborators-wrapper">
       <p>Matthew Thompson</p>
       <p>Cayden Hawron</p>
+      <p>Aryan Jassal</p>
     </div>
   </section>
 
