removed el gogo; added option to disallow reviews

--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -80,9 +80,9 @@
       <a href="{% url 'store:filter_products' 'all' %}">
         <img src="{% static 'images/the-best-guys.png' %}" alt="the best guys" style="height: 3rem;">
       </a>
-      <a href="https://el-go-go-5a501.firebaseapp.com/index.html">
+      {% comment %} <a href="https://el-go-go-5a501.firebaseapp.com/index.html">
         <img src="{% static 'images/el-gogo.png' %}" alt="el-gogo" style="height: 2.5rem;">
-      </a>
+      </a> {% endcomment %}
     </div>
   </section>
 
