--- a/static/store/styles/_navbar.scss
+++ b/static/store/styles/_navbar.scss
@@ -239,3 +239,15 @@
     margin: 1rem 0 0 0 !important;
   }
 }
+
+@media screen and (max-width: $md) {
+  .navbar-items-wrapper-phone > .navbar-buttons-wrapper {
+    ul.dropdown-menu.avatar-dropdown {
+      margin-left: -110px !important;
+    }
+
+    ul.dropdown-menu.cart-dropdown {
+      margin-left: -130px !important;
+    }
+  }
+}
