--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -27,6 +27,18 @@
           <li class="nav-item">
             <a class="nav-link" href="#contact-us">Contact Us</a>
           </li>
+          {% if user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="#{% url 'core:logout' %}">Logout</a>
+            </li>
+          {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'core:login' %}">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'core:register' %}">Register</a>
+            </li>
+          {% endif %}
         </ul>
       </div>
     </div>
