--- a/templates/store/_navbar.html
+++ b/templates/store/_navbar.html
@@ -71,6 +71,7 @@
       </div>
     </div>
   </div>
+
   <div class="navbar-container-phone d-md-none d-flex">
     <div class="nav-items-wrapper-phone">
       <a href="{% url 'core:home' %}" class="logo-container py-2">
@@ -78,7 +79,7 @@
       </a>
       <div class="navbar-buttons-wrapper">
         <div class="nav-button me-3">
-          <div class="nav-item mx-1 me-2 d-none d-lg-inline-flex">
+          <div class="nav-item mx-1 me-2 d-inline-flex d-lg-none">
             <div class="d-flex">
               <a href="#" class="outline-none" id="navbar-profile-dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 <img src="{% static 'images/blank-user-avatar.png' %}" alt="pfp" class="rounded-circle my-1" style="height: 40px; width: 40px;">
@@ -110,8 +111,9 @@
             </div>
           </div>
         </div>
+
         <div class="nav-button ms-3">
-          <div class="nav-item me-2 d-none d-lg-inline-flex">
+          <div class="nav-item me-2 d-inline-flex d-lg-none">
             <div class="d-flex">
               <a href="#" class="outline-none" id="navbar-cart-dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 <i class="bi bi-cart navbar-buttons"></i>
